# SURD-states

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/_modules/: modules.rst  surd_states.rst
examples/: E01_benchmark_source.ipynb  E01_benchmark_source.py  E02_benchmark_target.ipynb  E03_inner_outer.ipynb
examples/marimo/: E01_benchmark_source.py  E02_benchmark_target.py  E03_inner_outer.py
src/surd_states/: analytic_eqs.py  it_tools.py  surd.py
surd-states/: README.md  pyproject.toml
surd-states/examples/: E01_benchmark_source.py  E02_benchmark_target.py  E03_inner_outer.py
surd-states/examples/__marimo__/session/: E01_benchmark_source.py.json
surd-states/src/surd_states/: analytic_eqs.py  it_tools.py
